[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/entities/player/scr_player.gd" type="Script" id=1]
[ext_resource path="res://art/proto_floor.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00740741, 0.840741, 0.977778 )
colors = PoolColorArray( 0.513726, 0.560784, 0.996078, 0.501961, 0.558609, 0.601388, 0.990692, 0.449576, 0.891075, 0.902155, 0.95079, 0.0615431, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 15.8819

[sub_resource type="Animation" id=6]
resource_name = "Dash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.1 ),
"transitions": PoolRealArray( 3.24901, 2 ),
"update": 2,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="Trail" type="Particles2D" parent="."]
modulate = Color( 0.552941, 0.521569, 0.996078, 1 )
amount = 100
speed_scale = 2.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.214645 )
frames = SubResource( 4 )
animation = "idle"

[node name="MoveBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.179489 )
shape = SubResource( 5 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashHitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCoolDown" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 6 )
anims/Idle = SubResource( 7 )
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashHitTimer" to="." method="_on_DashHitTimer_timeout"]
[connection signal="timeout" from="DashCoolDown" to="." method="_on_DashCoolDown_timeout"]
